Revamp homepage content and update navigation
Updated the homepage with new creative sections, modernized personal descriptions, and replaced German UI text with English. Added new SVG icons, restructured the creative preview, and improved footer and social links. Also fixed the vinyl page home navigation to point to the main index.

--- a/src/pages/vinyl.html
+++ b/src/pages/vinyl.html
@@ -20,7 +20,7 @@
                 </a>
                 
                  <!-- Home Icon - immer in der Mitte -->
-                <a href="index.html#hero" class="nav-icon nav-home" title="Home">
+                <a href="index.html" class="nav-icon nav-home" title="Home">
                     <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2L2 12H5V22H9V16H15V22H19V12H22L12 2Z" fill="currentColor" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
                     </svg>
