Refactor for English language and UI improvements
Switched all user-facing text, comments, and HTML lang attributes from German to English for consistency. Improved button and error message styling, enhanced theme and navbar variable usage, and updated cache headers for HTML files in vercel.json. Removed .vercelignore and streamlined README and footer content.

--- a/vinyl.html
+++ b/vinyl.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Vinyl Collection - Mathis</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-links">
-                <!-- Zurück Link -->
+                <!-- Back Link -->
                 <a href="index.html" class="nav-icon nav-left" title="Back to Portfolio">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M19 12H5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -19,7 +18,7 @@
                     </svg>
                 </a>
                 
-                 <!-- Home Icon - immer in der Mitte -->
+                 <!-- Home Icon - always in center -->
                 <a href="index.html" class="nav-icon nav-home" title="Home">
                     <svg width="26" height="26" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2L2 12H5V22H9V16H15V22H19V12H22L12 2Z" fill="currentColor" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
@@ -187,16 +186,13 @@
             </ol>
             <p>Once configured, your entire collection will be displayed here with cover art, release information, and estimated values!</p>
         </div>
+        <div class="footer-content" style="text-align: center; margin-top: 0.5rem; margin-bottom: 5rem ; width: 100%; display: flex; justify-content: center;">
+        <p>&copy; Mathis</p>
+        </div>
+
     </main>
 
-    <footer class="footer">
-        <div class="footer-content">
-            <p>&copy; 2025 Mathis. Alle Rechte vorbehalten.</p>
-            <div class="footer-links">
-                <a href="index.html">Back to Portfolio</a>
-            </div>
-        </div>
-    </footer>
+    
 
     <script src="js/script.js"></script>
     <script src="js/vinyl.js"></script>
