--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Portfolio - Mathis</title>
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <!-- Invisible element at the very top for home navigation -->
@@ -14,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-links">
-                <!-- Linke Seite - Creative Section und Projects Section -->
+                <!-- Left side - Creative Section and Projects Section -->
                 <a href="#creative" class="nav-icon nav-left" title="Creative Section">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <!-- Lightbulb icon for creative ideas -->
@@ -30,14 +29,14 @@
                     </svg>
                 </a>
                 
-                 <!-- Home Icon - immer in der Mitte, größer -->
+                 <!-- Home Icon - always in center, larger -->
                 <a href="#top" class="nav-icon nav-home" title="Home">
                     <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M12 2L2 12H5V22H9V16H15V22H19V12H22L12 2Z" fill="currentColor" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"/>
                         </svg>
                     </a>
                 
-                <!-- Rechte Seite - Contact und Dark Mode Toggle -->
+                <!-- Right side - Contact and Dark Mode Toggle -->
                 <a href="#contact" class="nav-icon nav-right" title="Contact Section">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M20 4L12 8L4 4" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
