Refactor button styles and improve mobile navbar
Unified button reset styles, removed unused CSS variables, and simplified .retry-btn styling. Improved .link-icon SVG color handling and mobile navbar layout for better centering and responsiveness. Fixed minor HTML issues and added .vercelignore for deployment.

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@ I'm 20 and currently training to become an IT specialist in system integration h
         <section id="projects" class="projects-section">
             <h2 class="section-title">Projects</h2>
             <div class="projects-filter">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="pinned">Pinned</button>
+                <button class="filter-btn " data-filter="all">All</button>
+                <button class="filter-btn active" edata-filter="pinned">Pinned</button>
                 <button class="filter-btn" data-filter="recent">Latest</button>
             </div>
             <div class="projects-loading" id="projects-loading">
@@ -181,7 +181,14 @@ I'm 20 and currently training to become an IT specialist in system integration h
             </div>
         </section>
 
-        <section id="contact" class="contact-section">
+
+
+
+
+
+
+
+<section id="contact" class="contact-section">
             <h2 class="section-title">Links</h2>
             <div class="links-container">
                 <!-- Professional Row -->
@@ -222,12 +229,17 @@ I'm 20 and currently training to become an IT specialist in system integration h
                         </a>
                         <a href="https://discord.com/users/1373719537035378708" target="_blank" class="link-icon" title="Discord">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M20.317 4.492C18.787 3.802 17.147 3.292 15.432 3.000C15.415 2.997 15.398 3.005 15.387 3.020C15.185 3.372 14.960 3.835 14.804 4.198C12.977 3.925 11.161 3.925 9.366 4.198C9.211 3.828 8.977 3.372 8.774 3.020C8.763 3.006 8.746 2.998 8.729 3.000C7.015 3.292 5.375 3.802 3.844 4.492C3.835 4.496 3.828 4.502 3.823 4.510C0.956 9.040 0.179 13.453 0.564 17.812C0.566 17.828 0.575 17.843 0.588 17.853C2.589 19.358 4.523 20.264 6.422 20.863C6.439 20.868 6.457 20.862 6.467 20.848C6.905 20.231 7.296 19.579 7.631 18.892C7.645 18.865 7.632 18.833 7.604 18.823C7.026 18.599 6.474 18.329 5.944 18.024C5.913 18.006 5.910 17.963 5.938 17.941C6.038 17.866 6.138 17.788 6.234 17.708C6.246 17.698 6.262 17.696 6.276 17.702C10.070 19.499 14.155 19.499 17.905 17.702C17.919 17.695 17.935 17.697 17.947 17.708C18.043 17.788 18.143 17.866 18.244 17.941C18.272 17.963 18.270 18.006 18.238 18.024C17.709 18.336 17.157 18.599 16.578 18.822C16.550 18.832 16.538 18.865 16.551 18.892C16.894 19.578 17.285 20.230 17.715 20.847C17.725 20.862 17.743 20.868 17.760 20.863C19.668 20.264 21.602 19.358 23.603 17.853C23.617 17.843 23.625 17.829 23.627 17.812C24.084 12.737 22.883 8.366 20.347 4.511C20.342 4.502 20.334 4.496 20.317 4.492ZM8.287 15.259C7.144 15.259 6.201 14.197 6.201 12.893C6.201 11.589 7.126 10.526 8.287 10.526C9.456 10.526 10.398 11.598 10.381 12.893C10.381 14.197 9.448 15.259 8.287 15.259ZM15.73 15.259C14.587 15.259 13.644 14.197 13.644 12.893C13.644 11.589 14.569 10.526 15.73 10.526C16.899 10.526 17.841 11.598 17.824 12.893C17.824 14.197 16.899 15.259 15.73 15.259Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M20.317 4.492C18.787 3.802 17.147 3.292 15.432 3.000C15.415 2.997 15.398 3.005 15.387 3.020C15.185 3.372 14.960 3.835 14.804 4.198C12.977 3.925 11.161 3.925 9.366 4.198C9.211 3.828 8.977 3.372 8.774 3.020C8.763 3.006 8.746 2.998 8.729 3.000C7.015 3.292 5.375 3.802 3.844 4.492C3.835 4.496 3.828 4.502 3.823 4.510C0.956 9.040 0.179 13.453 0.564 17.812C0.566 17.828 0.575 17.843 0.588 17.853C2.589 19.358 4.523 20.264 6.422 20.863C6.439 20.868 6.457 20.862 6.467 20.848C6.905 20.231 7.296 19.579 7.631 18.892C7.645 18.865 7.632 18.833 7.604 18.823C7.026 18.599 6.474 18.329 5.944 18.024C5.913 18.006 5.910 17.963 5.938 17.941C6.038 17.866 6.138 17.788 6.234 17.708C6.246 17.698 6.262 17.696 6.276 17.702C10.070 19.499 14.155 19.499 17.905 17.702C17.919 17.695 17.935 17.697 17.947 17.708C18.043 17.788 18.143 17.866 18.244 17.941C18.272 17.963 18.270 18.006 18.238 18.024C17.709 18.336 17.157 18.599 16.578 18.822C16.550 18.832 16.538 18.865 16.551 18.892C16.894 19.578 17.285 20.230 17.715 20.847C17.725 20.862 17.743 20.868 17.760 20.863C19.668 20.264 21.602 19.358 23.603 17.853C23.617 17.843 23.625 17.829 23.627 17.812C24.084 12.737 22.883 8.366 20.347 4.511C20.342 4.502 20.334 4.496 20.317 4.492ZM8.287 15.259C7.144 15.259 6.201 14.197 6.201 12.893C6.201 11.589 7.126 10.526 8.287 10.526C9.456 10.526 10.398 11.598 10.381 12.893C10.381 14.197 9.448 15.259 8.287 15.259ZM15.73 15.259C14.587 15.259 13.644 14.197 13.644 12.893C13.644 11.589 14.569 10.526 15.73 10.526C16.899 10.526 17.841 11.598 17.824 12.893C17.824 14.197 16.899 15.259 15.73 15.259Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </a>
+
                     </div>
                 </div>
             </div>
+            
+    <script src="js/script.js"></script>
+</body>
+</html>
             <div class="footer-content" style="text-align: center; margin-top: 3rem; width: 100%; display: flex; justify-content: center;">
                 <p>&copy; Mathis</p>
             </div>
