--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </h1>
             
             <p class="hero-description">
-I'm 20 and currently training to become an IT specialist in system integration. I'm all about combining tech and creativity — whether it's writing code, setting up networks, jamming on my guitar, or building side projects just for fun.</p>
+            I'm 20 and currently training to become an IT specialist in system integration. I'm all about combining tech and creativity - whether it's writing code, setting up networks, jamming on my guitar, or building side projects just for fun.</p>
         </div>
 
         <section id="creative" class="creative-section">
