Restyle retry button and fix filter button attribute
Updated the .retry-btn styles for a more modern look, including gradient backgrounds, improved padding, and theme-specific shadows. Also fixed a typo in the 'data-filter' attribute for the pinned filter button in index.html.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <h2 class="section-title">Projects</h2>
             <div class="projects-filter">
                 <button class="filter-btn " data-filter="all">All</button>
-                <button class="filter-btn active" edata-filter="pinned">Pinned</button>
+                <button class="filter-btn active" data-filter="pinned">Pinned</button>
                 <button class="filter-btn" data-filter="recent">Latest</button>
             </div>
             <div class="projects-loading" id="projects-loading">
