Improve navbar responsiveness and add theme toggle animation
Refactored CSS for better navbar centering and full-width mobile support, including responsive sizing for icons and layout adjustments. Added a pulse animation to the theme toggle button for visual feedback. Updated index.html to include Vercel analytics script. Added .gitignore and package.json for dependency and environment management.

--- a/index.html
+++ b/index.html
@@ -238,15 +238,12 @@
                 </div>
             </div>
             
-    <script src="js/script.js"></script>
-</body>
-</html>
             <div class="footer-content" style="text-align: center; margin-top: 3rem; width: 100%; display: flex; justify-content: center;">
                 <p>&copy; Mathis</p>
             </div>
-        </section>
-    </main>
-
-    <script src="js/script.js"></script>
-</body>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
+  </body>
 </html>
