Refactor navbar styles and remove theme toggle pulse
Refactored CSS for the navbar to improve centering and consistency, removed redundant mobile styles, and standardized icon sizing. The theme toggle pulse animation and related JS/CSS were removed. Also cleaned up index.html by removing Vercel analytics scripts and duplicate script includes. Deleted package.json as dependencies are no longer needed.

--- a/index.html
+++ b/index.html
@@ -238,12 +238,15 @@
                 </div>
             </div>
             
+    <script src="js/script.js"></script>
+</body>
+</html>
             <div class="footer-content" style="text-align: center; margin-top: 3rem; width: 100%; display: flex; justify-content: center;">
                 <p>&copy; Mathis</p>
             </div>
-    <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-    </script>
-    <script defer src="/_vercel/insights/script.js"></script>
-  </body>
+        </section>
+    </main>
+
+    <script src="js/script.js"></script>
+</body>
 </html>
