Restructure portfolio and enhance homepage
Moved assets and scripts to new public and src directories, updated index.html with a new starfield background, improved navigation, and expanded content for development and creative sections. Added technology and project showcases, updated .gitignore for broader coverage, and removed obsolete js/script.js.

--- a/vinyl.html
+++ b/vinyl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vinyl Collection - Mathis</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="src/styles/main.css">
 </head>
 <body>
     <nav class="navbar">
@@ -194,7 +194,7 @@
 
     
 
-    <script src="js/script.js"></script>
-    <script src="js/vinyl.js"></script>
+    <script src="src/scripts/main.js"></script>
+    <script src="src/scripts/vinyl.js"></script>
 </body>
 </html>
