--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Mathis</title>
-    <link rel="stylesheet" href="/src/styles/main.css">
+    <link rel="stylesheet" href="./src/styles/main.css">
     <link rel="icon" type="image/x-icon" href="/public/assets/icons/favicon.png">
 </head>
 <body>
@@ -482,7 +482,7 @@
         </section>
     </main>
 
-    <script src="/src/scripts/main.js"></script>
+    <script src="./src/scripts/main.js"></script>
 
     <div class="footer-content" style="text-align: center; margin-top: 3rem; width: 100%; display: flex; justify-content: center;">
         <p>&copy; Mathis</p>
