Update image paths and add test.html
Corrected the image path in index.html to use a relative path. Added test.html in public/src/scripts with an image reference for testing purposes.

--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
     <main class="main-content">
         <div id="hero" class="hero-section">
             <div class="profile-image">
-                <img src="public/assets/images/profile.jpg" alt="Profilbild">
+                <img src="./assets/images/profile.jpg" alt="Profilbild">
             </div>
             
             <h1 class="hero-title">
