--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Mathis</title>
     <link rel="stylesheet" href="./src/styles/main.css">
-    <link rel="icon" type="image/x-icon" href="/public/assets/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="./assets/icons/favicon.png">
 </head>
 <body>
     <!-- Starfield Background -->
