--- a/public/index.html
+++ b/public/index.html
@@ -401,15 +401,14 @@
                     <div class="creative-item">
                         <div class="creative-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <!-- Electric guitar from SVG Repo -->
-                                <path d="M5.5 16.5c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l2.94 2.94c0.1 0.1 0.24 0.16 0.38 0.16c0.14 0 0.28-0.05 0.38-0.16c0.21-0.21 0.21-0.55 0-0.76L5.5 16.5z" fill="currentColor"/>
-                                <path d="M8 14.7c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l1.42 1.42c0.1 0.1 0.24 0.16 0.38 0.16c0.14 0 0.28-0.05 0.38-0.16c0.21-0.21 0.21-0.55 0-0.76L8 14.7z" fill="currentColor"/>
-                                <path d="M23.7 2c-0.12-0.52-0.26-0.86-0.4-1.01c-0.2-0.2-0.44-0.31-0.69-0.31c-0.13 0-0.25 0.03-0.36 0.08c-0.12 0.06-0.25 0.12-0.38 0.19l-0.5-0.5c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l0.26 0.26c-0.23 0.13-0.47 0.26-0.7 0.38l-0.3-0.3c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l0.08 0.08c-0.46 0.26-0.78 0.45-0.82 0.47c-0.04 0.02-0.08 0.05-0.11 0.08c-0.25 0.26-0.33 0.62-0.24 0.95l-6.56 6.56c-0.04-0.02-0.09-0.04-0.13-0.06c-0.28-0.13-0.53-0.25-0.76-0.48c-0.21-0.21 0.33-1.07 0.61-1.53c0.5-0.81 1.01-1.64 0.42-2.23c-0.11-0.11-0.31-0.25-0.63-0.25c-0.84 0-2.01 0.99-2.26 1.23c-0.94 0.94-1.32 1.67-1.68 2.38c-0.32 0.62-0.63 1.21-1.35 1.93c-0.54 0.54-1.24 0.81-1.99 1.09c-0.86 0.33-1.75 0.66-2.52 1.43c-3.32 3.32-0.09 6.55 1.13 7.77c1.21 1.21 2.83 2.59 4.66 2.59c1.09 0 2.14-0.49 3.11-1.46c0.77-0.77 1.1-1.66 1.43-2.52c0.28-0.75 0.55-1.45 1.09-1.99c0.52-0.52 0.93-0.71 1.4-0.93c0.49-0.23 1.05-0.49 1.69-1.14c1.6-1.6 1.49-2.38 1.12-2.76c-0.2-0.2-0.47-0.3-0.8-0.3c-0.37 0-0.78 0.13-1.2 0.27c-0.43 0.14-0.87 0.28-1.23 0.28c-0.24 0-0.41-0.06-0.55-0.2c-0.09-0.09-0.16-0.17-0.2-0.24l7.32-7.32c0.09 0.03 0.18 0.04 0.28 0.04c0.26 0 0.5-0.1 0.68-0.28l2.5-2.5C23.8 2.78 23.83 2.42 23.7 2zM19 4.8l0.6 0.6l-6.46 6.46c-0.07-0.23-0.21-0.47-0.46-0.73l0-0L19 4.8zM13.9 14.9C13.9 14.9 13.9 14.9 13.9 14.9c0.53 0 1.08-0.18 1.56-0.33c0.28-0.09 0.56-0.18 0.77-0.21c-0.14 0.28-0.5 0.75-0.97 1.22c-0.52 0.52-0.92 0.71-1.39 0.93c-0.49 0.23-1.05 0.49-1.7 1.15c-0.7 0.7-1.02 1.55-1.33 2.37c-0.3 0.79-0.58 1.54-1.19 2.14c-0.77 0.77-1.54 1.15-2.35 1.15c-1.44 0-2.84-1.22-3.9-2.28c-0.81-0.81-1.78-1.89-2.14-3.03c-0.35-1.13-0.02-2.19 1.01-3.22c0.6-0.6 1.35-0.89 2.14-1.19c0.82-0.31 1.67-0.63 2.37-1.33c0.84-0.84 1.2-1.53 1.54-2.2c0.34-0.66 0.67-1.29 1.49-2.11c0.32-0.32 0.87-0.69 1.24-0.84c-0.11 0.23-0.31 0.55-0.44 0.77c-0.53 0.86-1.26 2.05-0.46 2.85c0.36 0.36 0.73 0.54 1.06 0.69c0.28 0.13 0.52 0.24 0.74 0.46c0.25 0.25 0.23 0.35 0.15 0.67c-0.11 0.43-0.26 1.07 0.5 1.83C12.9 14.74 13.34 14.9 13.9 14.9zM20.7 5.2l-1.28-1.28c0.61-0.35 2.33-1.34 3.4-1.86c0.08 0.23 0.17 0.62 0.19 0.82L20.7 5.2z" fill="currentColor"/>
+                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2" stroke="currentColor" stroke-width="2"/>
+                                <circle cx="9" cy="9" r="2" stroke="currentColor" stroke-width="2"/>
+                                <path d="M21 15L16 10L5 21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </div>
-                        <h3>Music cover</h3>
-                        <a href="#" class="vinyl-collection-btn">
-                            Coming Soon
+                        <h3>Gallery</h3>
+                        <a href="https://mathisheck.de/all" target="_blank" class="vinyl-collection-btn">
+                            View
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M7 17L17 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M7 7H17V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -427,7 +426,7 @@
                         </div>
                         <h3>Vinyl Collection</h3>
                         <a href="vinyl.html" class="vinyl-collection-btn">
-                            View Collection
+                            View 
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M7 17L17 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 <path d="M7 7H17V17" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -455,12 +454,13 @@
                     <div class="creative-item">
                         <div class="creative-icon">
                             <svg width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2" stroke="currentColor" stroke-width="2"/>
-                                <circle cx="9" cy="9" r="2" stroke="currentColor" stroke-width="2"/>
-                                <path d="M21 15L16 10L5 21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                <!-- Electric guitar from SVG Repo -->
+                                <path d="M5.5 16.5c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l2.94 2.94c0.1 0.1 0.24 0.16 0.38 0.16c0.14 0 0.28-0.05 0.38-0.16c0.21-0.21 0.21-0.55 0-0.76L5.5 16.5z" fill="currentColor"/>
+                                <path d="M8 14.7c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l1.42 1.42c0.1 0.1 0.24 0.16 0.38 0.16c0.14 0 0.28-0.05 0.38-0.16c0.21-0.21 0.21-0.55 0-0.76L8 14.7z" fill="currentColor"/>
+                                <path d="M23.7 2c-0.12-0.52-0.26-0.86-0.4-1.01c-0.2-0.2-0.44-0.31-0.69-0.31c-0.13 0-0.25 0.03-0.36 0.08c-0.12 0.06-0.25 0.12-0.38 0.19l-0.5-0.5c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l0.26 0.26c-0.23 0.13-0.47 0.26-0.7 0.38l-0.3-0.3c-0.21-0.21-0.55-0.21-0.76 0c-0.21 0.21-0.21 0.55 0 0.76l0.08 0.08c-0.46 0.26-0.78 0.45-0.82 0.47c-0.04 0.02-0.08 0.05-0.11 0.08c-0.25 0.26-0.33 0.62-0.24 0.95l-6.56 6.56c-0.04-0.02-0.09-0.04-0.13-0.06c-0.28-0.13-0.53-0.25-0.76-0.48c-0.21-0.21 0.33-1.07 0.61-1.53c0.5-0.81 1.01-1.64 0.42-2.23c-0.11-0.11-0.31-0.25-0.63-0.25c-0.84 0-2.01 0.99-2.26 1.23c-0.94 0.94-1.32 1.67-1.68 2.38c-0.32 0.62-0.63 1.21-1.35 1.93c-0.54 0.54-1.24 0.81-1.99 1.09c-0.86 0.33-1.75 0.66-2.52 1.43c-3.32 3.32-0.09 6.55 1.13 7.77c1.21 1.21 2.83 2.59 4.66 2.59c1.09 0 2.14-0.49 3.11-1.46c0.77-0.77 1.1-1.66 1.43-2.52c0.28-0.75 0.55-1.45 1.09-1.99c0.52-0.52 0.93-0.71 1.4-0.93c0.49-0.23 1.05-0.49 1.69-1.14c1.6-1.6 1.49-2.38 1.12-2.76c-0.2-0.2-0.47-0.3-0.8-0.3c-0.37 0-0.78 0.13-1.2 0.27c-0.43 0.14-0.87 0.28-1.23 0.28c-0.24 0-0.41-0.06-0.55-0.2c-0.09-0.09-0.16-0.17-0.2-0.24l7.32-7.32c0.09 0.03 0.18 0.04 0.28 0.04c0.26 0 0.5-0.1 0.68-0.28l2.5-2.5C23.8 2.78 23.83 2.42 23.7 2zM19 4.8l0.6 0.6l-6.46 6.46c-0.07-0.23-0.21-0.47-0.46-0.73l0-0L19 4.8zM13.9 14.9C13.9 14.9 13.9 14.9 13.9 14.9c0.53 0 1.08-0.18 1.56-0.33c0.28-0.09 0.56-0.18 0.77-0.21c-0.14 0.28-0.5 0.75-0.97 1.22c-0.52 0.52-0.92 0.71-1.39 0.93c-0.49 0.23-1.05 0.49-1.7 1.15c-0.7 0.7-1.02 1.55-1.33 2.37c-0.3 0.79-0.58 1.54-1.19 2.14c-0.77 0.77-1.54 1.15-2.35 1.15c-1.44 0-2.84-1.22-3.9-2.28c-0.81-0.81-1.78-1.89-2.14-3.03c-0.35-1.13-0.02-2.19 1.01-3.22c0.6-0.6 1.35-0.89 2.14-1.19c0.82-0.31 1.67-0.63 2.37-1.33c0.84-0.84 1.2-1.53 1.54-2.2c0.34-0.66 0.67-1.29 1.49-2.11c0.32-0.32 0.87-0.69 1.24-0.84c-0.11 0.23-0.31 0.55-0.44 0.77c-0.53 0.86-1.26 2.05-0.46 2.85c0.36 0.36 0.73 0.54 1.06 0.69c0.28 0.13 0.52 0.24 0.74 0.46c0.25 0.25 0.23 0.35 0.15 0.67c-0.11 0.43-0.26 1.07 0.5 1.83C12.9 14.74 13.34 14.9 13.9 14.9zM20.7 5.2l-1.28-1.28c0.61-0.35 2.33-1.34 3.4-1.86c0.08 0.23 0.17 0.62 0.19 0.82L20.7 5.2z" fill="currentColor"/>
                             </svg>
                         </div>
-                        <h3>Gallery</h3>
+                        <h3>Music cover</h3>
                         <a href="#" class="vinyl-collection-btn">
                             Coming Soon
                             <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
